--- a/samples/BlazorLocalizerSample/Client/BlazorLocalizerSample.Client.csproj
+++ b/samples/BlazorLocalizerSample/Client/BlazorLocalizerSample.Client.csproj
@@ -10,10 +10,10 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Build" Version="3.2.0" PrivateAssets="all" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="3.2.0" PrivateAssets="all" />
     <PackageReference Include="System.Net.Http.Json" Version="3.2.0" />
-    <PackageReference Include="Tvermose.BlazorLocalizer" Version="0.9.1" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\src\BlazorLocalizer\BlazorLocalizer.csproj" />
     <ProjectReference Include="..\Shared\BlazorLocalizerSample.Shared.csproj" />
   </ItemGroup>
 
