--- a/src/BlazorLocalizer/BlazorLocalizer.csproj
+++ b/src/BlazorLocalizer/BlazorLocalizer.csproj
@@ -6,10 +6,10 @@
     
     <Authors>Jon Tvermose Nielsen</Authors>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <PackageTags>Blazor, Localizer, Blazor localizer, blazor component, localized, blazor async localizer, localization, blazor localization</PackageTags>
+    <PackageTags>Blazor, Localizer, Blazor localizer, blazor component, localized, blazor async localizer, localization, blazor localization, blazor webassembly, webassembly</PackageTags>
     <PackageId>Tvermose.BlazorLocalizer</PackageId>
     <Product>Async Blazor Localizer</Product>
-    <Description>Blazor Localization that supports fetching localized texts asynchronously, for example from your backend API.
+    <Description>Blazor Webassembly Localization that supports fetching localized texts asynchronously, for example from your backend API.
 Inject IBlazorLocalizer or use the component &lt;Localized&gt; to localize your texts.
 
 Please refer to readme or project URL for a complete setup and usage guide.</Description>
@@ -17,7 +17,7 @@ Please refer to readme or project URL for a complete setup and usage guide.</Des
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageReleaseNotes>Preview release</PackageReleaseNotes>
     <RepositoryUrl>https://github.com/JonTvermose/BlazorLocalizer</RepositoryUrl>
-    <Version>0.9.2</Version>
+    <Version>0.9.3</Version>
     <Copyright />
     <PackageProjectUrl>https://github.com/JonTvermose/BlazorLocalizer</PackageProjectUrl>
     <RepositoryType>Github</RepositoryType>
