--- a/samples/BlazorLocalizerSample/Server/BlazorLocalizerSample.Server.csproj
+++ b/samples/BlazorLocalizerSample/Server/BlazorLocalizerSample.Server.csproj
@@ -1,11 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="7.0.13" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="7.0.14" />
   </ItemGroup>
 
   <ItemGroup>
